tdf#154235: Fix underline position in PDF export

Change-Id: I9a15646cc6a69ca7226f06ecc56a28fba3fa96db
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149071
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>